<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".post.MediaPostAddActivity">

    <ImageButton
        android:id="@+id/post_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:background="@android:color/transparent"
        android:contentDescription="@string/post_back_desc"
        android:src="@drawable/baseline_arrow_back_new_24"
        app:tint="?android:textColor"
        />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/post_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/post_back"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginHorizontal="@dimen/default_margin"
            >

            <ImageView
                android:id="@+id/post_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/post_imageview_desc"
                android:scaleType="fitXY"
                app:layout_constraintDimensionRatio="H,4:3"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <androidx.media3.ui.PlayerView
                android:id="@+id/post_video"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/post_imageview_desc"
                app:layout_constraintDimensionRatio="H,4:3"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:resize_mode="fill"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/post_parent"
        >

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"

            >
            <EditText
                android:id="@+id/post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textAutoCorrect"
                android:hint="@string/title_text"
                android:importantForAutofill="no"
                android:padding="@dimen/default_padding"
                android:layout_marginHorizontal="@dimen/default_margin"
                />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginVertical="12dp"

            >


            <EditText
                android:id="@+id/post_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/post_tags_text"
                android:minHeight="48dp"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:autofillHints="text"
                android:inputType="textAutoComplete"
                android:layout_marginStart="5dp"
                />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/post_mentions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_mentions_text"
                android:minHeight="48dp"
                android:textSize="20sp"
                android:gravity="center"
                />
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/post_submit"
            android:layout_width="128dp"
            android:layout_height="64dp"
            android:text="@string/upload_text"
            android:textColor="@color/white"
            app:elevation="24dp"
            app:backgroundTint="@color/sky_blue"
            android:textSize="22sp"
            android:layout_margin="@dimen/default_margin"
            android:layout_gravity="end"
            />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="32dp"
            >
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/post_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_status_default"
                android:minHeight="48dp"
                android:textSize="20sp"
                android:gravity="center"
                />
        </com.google.android.material.card.MaterialCardView>
        
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/post_progress_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >
        <ProgressBar
            android:id="@+id/post_sent_progress"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:indeterminate="false"
            android:progress="0"
            android:progressDrawable="@drawable/circular_progress_drawable"
            />

        <TextView
            android:id="@+id/progressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_number"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>

</RelativeLayout>