<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/post_add_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:background="@android:color/transparent"
        android:contentDescription="@string/post_back_desc"
        android:src="@drawable/baseline_arrow_back_new_24"
        app:tint="?android:textColor"
        />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/post_add_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:title="@string/add_post_text"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/post_add_back"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/post_add_text_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_add_toolbar"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fontFamily = "@font/open_sans"
            android:padding="@dimen/default_padding"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/post_add_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="64dp"
                android:hint="@string/add_text_post"
                app:fontFamily = "@font/open_sans"
                android:inputType="textMultiLine|textAutoComplete|textAutoCorrect"
                android:maxLength="400"
                android:gravity="start"
                android:background="@android:color/transparent"
                android:lineSpacingExtra="1dp"
                android:letterSpacing="0.03"
                android:textSize="20sp"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/post_media_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_add_text_card"
        android:orientation="horizontal"
        android:layout_marginVertical="@dimen/default_margin"
        android:layout_marginHorizontal="@dimen/margin_small"
        >

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/post_add_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/default_padding"
                >

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/baseline_image_24"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:contentDescription="@string/add_video_image_desc" />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_image_post"
                    android:textSize="20sp"
                    android:letterSpacing="0.2"
                    android:layout_gravity="center"
                    android:gravity="center"
                    />
            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/post_add_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/default_padding"
                >

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/baseline_video_library_24"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:contentDescription="@string/add_video_image_desc" />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_video_post"
                    android:textSize="20sp"
                    android:letterSpacing="0.2"
                    android:layout_gravity="center"
                    android:gravity="center"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/post_add_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_media_add"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/sky_blue"
        android:text="@string/upload_text"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:cornerRadius="8dp"
        android:layout_marginEnd="@dimen/default_margin"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/add_post_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_below="@id/post_add_upload"
        android:visibility="gone"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/add_post_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/post_imageview_desc"
                app:layout_constraintDimensionRatio="H,4:3"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_add_48"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:translationZ="10dp"
                />

            <androidx.media3.ui.PlayerView
                android:id="@+id/add_post_video"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/post_imageview_desc"
                app:layout_constraintDimensionRatio="H,4:3"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:resize_mode="zoom"
                >

            </androidx.media3.ui.PlayerView>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>