<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.EditProfileActivity">

  <com.google.android.material.appbar.MaterialToolbar
      android:id="@+id/profile_toolbar"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      app:title="@string/edit_post_text"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginHorizontal="@dimen/default_margin"
      android:layout_below="@id/profile_toolbar"
      android:layout_marginVertical="@dimen/default_margin"
      >
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:src="@color/sky_blue"
        />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        >

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/profile_name_edit"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/placeholder_multiline"
          android:textSize="24sp"
          android:layout_gravity="center"
          android:textAlignment="center"
          android:letterSpacing="0.2"
          android:padding="16dp"
          android:maxLines="1"
          app:fontFamily="@font/kanit_font"
          android:textStyle="normal"
          android:background="@android:color/transparent"
          android:inputType="textPersonName"
          />
    </com.google.android.material.card.MaterialCardView>

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_marginVertical="@dimen/default_margin"-->
<!--        android:inputType="textEmailAddress"-->
<!--        >-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/profile_email_edit"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="48dp"-->
<!--            android:hint="@string/fui_email_hint"-->
<!--            android:inputType="textEmailAddress"-->
<!--            />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/default_margin"
        android:inputType="textPersonName"
        android:layout_marginHorizontal="32dp"
        >


      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/profile_username_edit"
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:hint="@string/username_hint"
          android:inputType="textPersonName"
          />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile_edit_submit"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/submit_text"
        android:backgroundTint="@color/sky_blue"
        app:cornerRadius="16dp"
        app:fontFamily="@font/open_sans"
        android:textColor="@color/white"
        android:layout_gravity="end"
        />

  </LinearLayout>

  </RelativeLayout>