<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ViewProfileActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:title="@string/profile_string"
        app:titleCentered="true"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_toolbar_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/baseline_person_outline_48"
            android:layout_gravity="end"
            android:layout_marginHorizontal="@dimen/default_margin"
            />
    </com.google.android.material.appbar.MaterialToolbar>
    
    <LinearLayout
        android:id="@+id/profile_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_below="@id/profile_toolbar"
        android:layout_marginVertical="@dimen/default_margin"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@color/sky_blue"
            />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            >
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_multiline"
                    android:textSize="24sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:letterSpacing="0.2"
                    android:padding="16dp"
                    android:maxLines="1"
                    app:fontFamily="@font/kanit_font"
                    />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_info"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/default_margin"
        >
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/profile_follow_Card"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/default_margin"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_add_48"
                    android:layout_gravity="center"
                    app:tint="?android:textColor"
                    android:contentDescription="@string/left_follow_desc" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/profile_follow_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follow_text"
                    android:textSize="22sp"
                    android:padding="3dp"
                    app:fontFamily="@font/roboto"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/profile_chat_card"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/default_margin"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_chat_bubble_outline_24"
                    android:layout_gravity="center"
                    app:tint="?android:textColor"
                    android:layout_marginStart="12dp"
                    android:contentDescription="@string/left_message_desc"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message_text"
                    android:textSize="20sp"
                    android:padding="3dp"
                    app:fontFamily="@font/roboto"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/profile_buttons"
        android:layout_margin="@dimen/default_margin"
        >
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/profile_followers_card"
            android:layout_height="wrap_content"
            android:layout_width="96dp"
            android:layout_weight="1"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/default_padding"
                android:layout_gravity="center"
                >

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follower_text"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:padding="@dimen/default_padding"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/profile_followers_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_number"
                    android:textSize="17sp"
                    android:layout_gravity="center"
                    android:paddingHorizontal="@dimen/default_padding"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/profile_posts_card"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/default_padding"
                android:layout_gravity="center"
                >


                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/posts_text"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:padding="@dimen/default_padding"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/profile_posts_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_number"
                    android:textSize="17sp"
                    android:layout_gravity="center"
                    android:paddingHorizontal="@dimen/default_padding"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/profile_followings_card"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/default_padding"
               android:layout_gravity="center"
                >

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following_text"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:padding="@dimen/default_padding"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/profile_followings_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_number"
                    android:textSize="17sp"
                    android:layout_gravity="center"
                    android:paddingHorizontal="@dimen/default_padding"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profile_posts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/profile_data"
        android:layout_margin="@dimen/default_margin"
        tools:context=".profile.ViewProfileActivity"
        tools:listitem="@layout/item_small_post"
        />

</RelativeLayout>